# Ski-touring-live

./: .gitignore  README.md  Untitled.ipynb  config.json  dedoublonne_dataset.py  failed_topos.txt  json_to_csv.py  meteo_cache.json  pyproject.toml  requirements.txt  skitour_full_dataset.csv  skitour_ml_dataset.csv  skitour_ml_dataset_chat.csv  skitour_topos.csv  spring_score_validation_dataset.csv  test.py  topo_cache.json
data/: bera_latest.csv  bera_latest.json  massif_mapping.json  meteo_cache.csv  meteo_cache.parquet  recit_sentiment_analysis.csv
models/: feature_importance_regression.csv  skiability_model.cbm  skiability_regression.txt  skiability_regression_physical.txt  skiability_regression_spring.txt
notebooks/: 01_scoring_rule_based.ipynb  analyse_data.py  analyze_skiability_with_deberta.py  eda_skitour.py  extract_topo_skitour.py  extract_topo_skitour_claude.py  fetch_skitour_data.py  fetch_skitour_meteo.py  fetch_skitour_meteo_chat.py  fetch_skitour_meteo_gemini.py  fetch_skitour_meteo_openmeteo - version OK.py  fetch_skitour_meteo_openmeteo.py  readme.md  reconstruit_json.py  supprime_topo_erreur.py  test_math.py  train_model.py  train_model_regression.py  train_model_regression_physical.py  train_model_regression_physical_rf.py  train_model_regression_physical_spring.py  validation_spring_score.py  validation_spring_scorev2.py
scripts/: bera_daily.py  bera_daily_local.py  beragrok.py  extract_massifs.py  fetch_camptocamp_routes.py  fetch_camptocamp_routes_fixed.py  fetch_meteo_auto.py  nettoyage_topo.py  validation_data_matching.py
src/: app.py  (+9 more)
(+1620 files in other folders)
